<resources>
    <string name="app_name">NewApplication</string>
    <string name="password">Password</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="welcome">Welcome back</string>
    <string name="mail">E-mail</string>
    <string name="remember">Remember me</string>
    <string name="forget">Forget Password?</string>
    <string name="login">Login</string>
    <string name="or">Or Login with</string>
    <string name="dontHaveAccount">Don\'t have account?</string>
    <string name="signup">Sign Up</string>
    <string name="signUp">Sign Up!</string>
    <string name="hello">Hello,</string>
    <string name="kayıtBasariliBasligi">Kayıt Başarılı</string>
    <string name="kayitBasariliYazisi">Tebrikler!, başarılı bir şekilde kayıt oluşturdunuz</string>
    <string name="ok">Tamam</string>
    <string name="hata">Tekrar Deneyin!</string>
    <string name="hataMesajı">Kayıt olabilmek için bilgileri lütfen doğru şekilde girin</string>
    <string name="hataMesajıLogin">Giriş sağlayabilmek için lütfen doğru bilgileri giriniz</string>
    <string name="edit">Edit</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="post">Post</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>