<?xml version="1.0" encoding="utf-8"?>


<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    app:cardCornerRadius="55dp"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/uploadCompleteCardView"
        android:layout_width="match_parent"
        android:layout_height="344dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="98dp"
            android:layout_height="86dp"
            android:layout_marginTop="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/onay" />

        <TextView
            android:id="@+id/textViewDialog"
            android:layout_width="wrap_content"
            android:layout_height="34dp"
            android:layout_marginTop="24dp"
            android:gravity="center"
            android:text="@string/kayıtBasariliBasligi"
            android:textColor="@color/kayit"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="25sp"
            android:layout_marginTop="32dp"
            android:text="@string/kayitBasariliYazisi"
            android:textColor="@android:color/darker_gray"
            android:textSize="15sp"
            app:layout_constraintBottom_toTopOf="@+id/button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewDialog"
            app:layout_constraintVertical_bias="0.5" />

        <Button
            android:id="@+id/button"
            android:layout_width="132dp"
            android:layout_height="51dp"
            android:layout_marginTop="32dp"
            android:backgroundTint="@color/kayit"
            android:text="@string/ok"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView9" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
