<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".homePage.fragment.searchProfile.SearchProfileFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="0dp"
        android:layout_height="85dp"
        android:background="?attr/colorPrimary"
        android:backgroundTint="@color/backround"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profileImage"
        app:civ_border_color="@android:color/transparent"
        app:civ_border_width="2dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar4"
        android:layout_width="92dp"
        android:layout_height="92dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/profile_symbol" />

    <TextView
        android:id="@+id/textViewName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:textColor="@color/text"
        android:layout_marginTop="16dp"
        android:text="Yusuf"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/textViewPostSize"
        app:layout_constraintStart_toEndOf="@+id/profileImage"
        app:layout_constraintTop_toBottomOf="@+id/toolbar4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/text"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp"
        android:text="24" />

    <EditText
        android:id="@+id/EditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="8dp"
        android:textColor="@color/text"
        android:background="@null"
        android:text="Akdeniz Üniversitesi / İzmir/Trablus"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/textView16"
        app:layout_constraintStart_toEndOf="@+id/profileImage"
        app:layout_constraintTop_toBottomOf="@+id/textViewPostSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:textColor="@color/text"
        android:text="@string/post"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textViewFollowersSize"
        app:layout_constraintEnd_toStartOf="@+id/textViewFollowingSize"
        app:layout_constraintStart_toEndOf="@+id/textViewPostSize"
        app:layout_constraintTop_toBottomOf="@+id/toolbar4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="58dp"
        android:textColor="@color/text"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="62dp"
        android:text="550" />

    <TextView
        android:id="@+id/textViewFollowingSize"
        app:layout_constraintStart_toEndOf="@+id/textViewFollowersSize"
        app:layout_constraintTop_toBottomOf="@+id/toolbar4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/text"
        android:layout_marginStart="62dp"
        android:layout_marginTop="20dp"
        android:text="332" />

    <TextView
        android:id="@+id/textView17"
        app:layout_constraintStart_toEndOf="@+id/textView16"
        app:layout_constraintTop_toBottomOf="@+id/textViewFollowersSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:textColor="@color/text"
        android:text="@string/followers"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView18"
        app:layout_constraintStart_toEndOf="@+id/textView17"
        app:layout_constraintTop_toBottomOf="@+id/textViewFollowingSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:textColor="@color/text"
        android:text="@string/following"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/textViewUserName"
        app:layout_constraintStart_toStartOf="@+id/toolbar4"
        app:layout_constraintTop_toTopOf="@+id/toolbar4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/lora"
        android:gravity="center_horizontal"
        android:text=""
        android:textColor="@color/white"
        android:textSize="25sp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/RvPostsSearch"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EditText" />

</androidx.constraintlayout.widget.ConstraintLayout>